--- a/views/report.html
+++ b/views/report.html
@@ -32,12 +32,32 @@
                 <button>requests</button>
             </article>
             <article class="report__details">
-                <details id="queryAboutTable7">
+                <details id="queryAboutTable1">
                     <summary>
-                        <div class="details__description">Campus: </div>
+                        <div class="details__description">Tabla 1: </div>
                         <div class="details__container">
-                            <p>7. Devuelve el nombre de los clientes y el nombre de sus representantes junto con la ciudad de la oficina a la que pertenece el representante.</p>
-                            <!-- <p><marquee behavior="" direction="">Consultas sobre una tabla 6.Devuelve un listado con el nombre de los todos los clientes españoles.</marquee></p> -->
+                            <!-- <p> .</p> -->
+                            <p><marquee behavior="" direction=""> 1. Devuelve un listado con el código de oficina y la ciudad donde hay oficinas.</marquee></p>
+                        </div>
+                    </summary>
+                    <div class="report__container"></div>
+                </details>
+                <details id="queryAboutTable2">
+                    <summary>
+                        <div class="details__description">Tabla 2: </div>
+                        <div class="details__container">
+                            <!-- <p> .</p> -->
+                            <p><marquee behavior="" direction="">Devuelve un listado con la ciudad y el teléfono de las oficinas de España.</marquee></p>
+                        </div>
+                    </summary>
+                    <div class="report__container"></div>
+                </details>
+                <details id="queryAboutTable3">
+                    <summary>
+                        <div class="details__description">Tabla 3: </div>
+                        <div class="details__container">
+                            <!-- <p> .</p> -->
+                            <p><marquee behavior="" direction="">3. Devuelve un listado con el nombre, apellidos y email de los empleados cuyo jefe tiene un código de jefe igual a 7.</marquee></p>
                         </div>
                     </summary>
                     <div class="report__container"></div>
