feat: :construction: Ensamble de consulta numero 4

--- a/views/report.html
+++ b/views/report.html
@@ -31,6 +31,7 @@
                 <button>request details</button>
                 <button>requests</button>
             </article>
+            <!-- ejerciciio 1 -->
             <article class="report__details">
                 <details id="queryAboutTable1">
                     <summary>
@@ -42,6 +43,7 @@
                     </summary>
                     <div class="report__container"></div>
                 </details>
+                <!-- ejercicio2  -->
                 <details id="queryAboutTable2">
                     <summary>
                         <div class="details__description">Tabla 2: </div>
@@ -52,6 +54,7 @@
                     </summary>
                     <div class="report__container"></div>
                 </details>
+                <!-- ejercicio 3  -->
                 <details id="queryAboutTable3">
                     <summary>
                         <div class="details__description">Tabla 3: </div>
@@ -62,6 +65,19 @@
                     </summary>
                     <div class="report__container"></div>
                 </details>
+
+                <!-- ejercicio 4  -->
+                <details id="queryAboutTable4">
+                    <summary>
+                        <div class="details__description">Tabla 4: </div>
+                        <div class="details__container">
+                            <!-- <p> .</p> -->
+                            <p><marquee behavior="" direction="">4. Devuelve el nombre del puesto, nombre, apellidos y email del jefe de la empresa.</marquee></p>
+                        </div>
+                    </summary>
+                    <div class="report__container"></div>
+                </details>
+               
                 <!-- <details data-click="queryAboutTable8">
                     <summary>
                         <div class="details__description">Campus: </div>
