feat: :cosntruction: nuevas consultas ensambladas (1tabla)
consulta numero: 5, 6 , 7 , 8 , 9 , 10 , 11 , 12 , 13 , 14 , 15

--- a/views/report.html
+++ b/views/report.html
@@ -77,7 +77,148 @@
                     </summary>
                     <div class="report__container"></div>
                 </details>
-               
+
+                <!-- Ejercicio 5 -->
+                <details id="queryAboutTable5">
+                    <summary>
+                        <div class="details__description">Tabla 5: </div>
+                        <div class="details__container">
+                            <!-- <p> .</p> -->
+                            <p><marquee behavior="" direction="">5. Devuelve un listado con el nombre, apellidos y puesto de aquellos empleados que no sean representantes de ventas.</marquee></p>
+                        </div>
+                    </summary>
+                    <div class="report__container"></div>
+                </details>
+                <!-- EJERCICIO 6  -->
+                <details id="queryAboutTable6">
+                    <summary>
+                        <div class="details__description">Tabla 6: </div>
+                        <div class="details__container">
+                            <!-- <p> .</p> -->
+                            <p><marquee behavior="" direction="">6. Devuelve un listado con el nombre de los todos los clientes españoles.</marquee></p>
+                        </div>
+                    </summary>
+                    <div class="report__container"></div>
+                </details>
+
+                <!-- EJERCICIOO 7  -->
+                <details id="queryAboutTable7">
+                    <summary>
+                        <div class="details__description">Tabla 7: </div>
+                        <div class="details__container">
+                            <!-- <p> .</p> -->
+                            <p><marquee behavior="" direction="">7. Devuelve un listado con los distintos estados por los que puede pasar un pedido.</marquee></p>
+                        </div>
+                    </summary>
+                    <div class="report__container"></div>
+                </details>
+<!-- EJERCICIO 8  -->
+            <details id="queryAboutTable8">
+                <summary>
+                    <div class="details__description">Tabla 8: </div>
+                    <div class="details__container">
+                        <!-- <p> .</p> -->
+                        <p><marquee behavior="" direction="">8. Devuelve un listado con el código de cliente de aquellos clientes que realizaron algún pago en 2008</marquee></p>
+                    </div>
+                </summary>
+                <div class="report__container"></div>
+            </details>
+            <!-- EJERCICIO 9  -->
+            <details id="queryAboutTable9">
+                <summary>
+                    <div class="details__description">Tabla 9: </div>
+                    <div class="details__container">
+                        <!-- <p> .</p> -->
+                        <p><marquee behavior="" direction=""> 9. Devuelve un listado con el código de pedido, código de cliente, fecha esperada y fecha de entrega de los pedidos que no han sido entregados a tiempo.</marquee></p>
+                    </div>
+                </summary>
+                <div class="report__container"></div>
+            </details>
+            <!-- EJERCICIO 10  -->
+            <details id="queryAboutTable10">
+                <summary>
+                    <div class="details__description">Tabla 10: </div>
+                    <div class="details__container">
+                        <!-- <p> .</p> -->
+                        <p><marquee behavior="" direction=""> 10. Devuelve un listado con el código de pedido, código de cliente, fecha esperada y fecha de entrega de los pedidos cuya fecha de entrega ha sido al menos dos días antes de la fecha esperada.</marquee></p>
+                    </div>
+                </summary>
+                <div class="report__container"></div>
+            </details>
+            <!-- EJERCICIO 11 -->
+            <details id="queryAboutTable11">
+                <summary>
+                    <div class="details__description">Tabla 11: </div>
+                    <div class="details__container">
+                        <!-- <p> .</p> -->
+                        <p><marquee behavior="" direction=""> 11. Devuelve un listado de todos los pedidos que fueron **rechazados** en `2009`.</marquee></p>
+                    </div>
+                </summary>
+                <div class="report__container"></div>
+            </details>
+            <!-- EJERCICIO 12  -->
+            <details id="queryAboutTable12">
+                <summary>
+                    <div class="details__description">Tabla 12: </div>
+                    <div class="details__container">
+                        <!-- <p> .</p> -->
+                        <p><marquee behavior="" direction="">12. Devuelve un listado de todos los pedidos que han sido **entregados** en el mes de enero de cualquier año.</marquee></p>
+                    </div>
+                </summary>
+                <div class="report__container"></div>
+            </details>
+<!-- EJERCICIO 13 -->
+<details id="queryAboutTable13">
+    <summary>
+        <div class="details__description">Tabla 13: </div>
+        <div class="details__container">
+            <!-- <p> .</p> -->
+            <p><marquee behavior="" direction="">13. Devuelve un listado con todos los pagos que se realizaron en el año `2008` mediante `Paypal`. Ordene el resultado de mayor a menor.
+            </marquee></p>
+        </div>
+    </summary>
+    <div class="report__container"></div>
+</details>
+     <!-- EJERCICIO 14  -->
+     <details id="queryAboutTable14">
+        <summary>
+            <div class="details__description">Tabla 14: </div>
+            <div class="details__container">
+                <!-- <p> .</p> -->
+                <p><marquee behavior="" direction="">
+                    14. Devuelve un listado con todas las formas de pago que aparecen en la tabla `pago`. Tenga en cuenta que no deben aparecer formas de pago repetidas.
+                </marquee></p>
+            </div>
+        </summary>
+        <div class="report__container"></div>
+    </details>
+               <!-- EJRCICIO 15 -->
+               <details id="queryAboutTable15">
+                <summary>
+                    <div class="details__description">Tabla 15: </div>
+                    <div class="details__container">
+                        <!-- <p> .</p> -->
+                        <p><marquee behavior="" direction="">
+                            15. Devuelve un listado con todos los productos que pertenecen a la gama `Ornamentales` y que tienen más de `100` unidades en stock. El listado deberá estar ordenado por su precio de venta, mostrando en primer lugar los de mayor precio.
+                        </marquee></p>
+                    </div>
+                </summary>
+                <div class="report__container"></div>
+            </details>
+              <!-- EJERCICIO 16  -->
+              <details id="queryAboutTable16">
+                <summary>
+                    <div class="details__description">Tabla 16: </div>
+                    <div class="details__container">
+                        <!-- <p> .</p> -->
+                        <p><marquee behavior="" direction="">
+                            16. Devuelve un listado con todos los clientes que sean de la ciudad de `Madrid` y cuyo representante de ventas tenga el código de empleado `11` o `30`.
+                        </marquee></p>
+                    </div>
+                </summary>
+                <div class="report__container"></div>
+            </details>
+
                 <!-- <details data-click="queryAboutTable8">
                     <summary>
                         <div class="details__description">Campus: </div>
