--- a/views/report.html
+++ b/views/report.html
@@ -426,3 +426,113 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                <!-- <details data-click="queryAboutTable8">
+                    <summary>
+                        <div class="details__description">Campus: </div>
+                        <div class="details__container">
+                            <p>8. Devuelve un listado con el código de cliente de aquellos clientes que realizaron algún pago en 2008. Tenga en cuenta que deberá eliminar aquellos códigos de cliente que aparezcan repetidos.</p>
+                        </div>
+                    </summary>
+                    <div class="report__container">
+                        <div class="report__card">
+                            <div class="card__title">
+                                <div>Hello, I’m Isaac Fayemi</div>
+                            </div>
+                            <div class="card__body">
+                                <div class="body__marck">
+                                    <p><b>Welcome to my figma community file: </b>You can follow me on twitter here</p>
+                                    <p><b>Welcome to my figma community file: </b>You can follow me on twitter here</p>
+                                    <p><b>Welcome to my figma community file: </b>You can follow me on twitter here</p>
+                                    <p><b>Welcome to my figma community file: </b>You can follow me on twitter here</p>
+                                    <p><b>Welcome to my figma community file: </b>You can follow me on twitter here</p>
+                                </div>
+                            </div>
+                            <div class="card__footer">
+                                <div>Hello, I’m Isaac Fayemi</div>
+                            </div> 
+                        </div>
+                        
+                    </div>
+                </details> -->
+            </article>
+        </section>
+    </main>
+</body>
+</html>
